initial client and amdin features
